style modified and other bugs fixed

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -48,7 +48,7 @@
     </div>
     <div class="border"></div>
 
-    <div class="search-fields">
+    <!-- <div class="search-fields">
         <h4>
             Find pages with...
         </h4>
@@ -82,7 +82,75 @@
 
 
 
-    </div>
+    </div> -->
+
+
+
+
+
+
+
+
+
+
+    <form action="https:/www.google.com/search">
+        <div
+            style=" margin-top: 30px;  margin-bottom: 10px; width:59%;display: flex; justify-content: space-between;">
+            <h4>
+                Find pages with...
+            </h4>
+            <h3 class="title-todo">
+                To do this in the search box.
+            </h3>
+
+        </div>
+
+
+        <div class="labels">
+
+            <div>
+                <label for="">all these words:</label>
+                <input class="input" type="text" name="as_q">
+                <p> Type the important words: tri-colour rat terrier</p>
+            </div>
+            <div>
+                <label for="">this exact word or phrase:</label>
+                <input class="input" type="text" name="as_epq">
+                <p>Put exact words in quotes: "rat terrier"</p>
+            </div>
+            <div> <label for="">any of these words:
+
+                </label> <input class="input" type="text" name="as_oq">
+                <p>Type OR between all the words you want: miniature OR standard</p>
+            </div>
+            <div>
+                <label for="">none of these words:</label>
+                <input class="input" type="text" name="as_eq">
+                <p>Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</p>
+            </div>
+            <div>
+                <label for="">numbers ranging from:</label>
+
+                <input class="inputs" type="text">
+                <h4> to </h4>
+                <input class="inputs" type="text">
+
+
+
+                <p>Put two full stops between the numbers and add a unit of measurement
+                </p>
+
+            </div>
+        </div>
+        <button class="sign-btn adv-btn" type="submit">Advanced Search</button>
+    </form>
+
+<style>
+    
+    
+</style>
+
+
 </body>
 <footer>
     <div class="location">
